--- a/01-clases/app/src/main/res/layout/activity_blist_view.xml
+++ b/01-clases/app/src/main/res/layout/activity_blist_view.xml
@@ -2,9 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/cl_blist_views"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BListView">
 
+    <ListView
+        android:id="@+id/lv_list_view"
+        android:layout_width="253dp"
+        android:layout_height="372dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_anadir_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="Anadir"
+        app:layout_constraintEnd_toEndOf="@+id/lv_list_view"
+        app:layout_constraintStart_toStartOf="@+id/lv_list_view"
+        app:layout_constraintTop_toBottomOf="@+id/lv_list_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
