--- a/01-clases/app/src/main/res/layout/activity_main.xml
+++ b/01-clases/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="C. Vida"
-        tools:layout_editor_absoluteX="378dp"
-        tools:layout_editor_absoluteY="47dp" />
+        tools:layout_editor_absoluteX="307dp"
+        tools:layout_editor_absoluteY="253dp" />
+
+    <Button
+        android:id="@+id/btn_ir_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="List View"
+        app:layout_constraintEnd_toEndOf="@+id/btn_ciclo_vida"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="@+id/btn_ciclo_vida"
+        app:layout_constraintTop_toBottomOf="@+id/btn_ciclo_vida" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
