--- a/01-clases/app/src/main/res/values-en-port/colors.xml
+++ b/01-clases/app/src/main/res/values-en-port/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color1">#67D5B0</color>
-    <color name="color2">#8AA6EC</color>
+    <color name="color1">#0B2C7B</color>
+    <color name="color2">#E0E3EA</color>
 
 </resources>
